# dpnael-v2

./: .gitignore  README.md  dpnael.spec  pyproject.toml  script.sh
.github/workflows/: release.yaml
dpnael/: pyproject.toml
dpnael.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dpnael/services/: docker_service.py  hosts_service.py  telemetry_service.py
dpnael/ui/: app.py
dpnael/ui/screens/: run_screen.py  tinker_screen.py
dpnael/ui/widgets/: container_list.py
dpnael/views/: telemetry_view.py
